--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,37 @@
-#glCanvas-wrapper {
-    display: flex;
+body {  display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 0.2fr 2.6fr 0.2fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+  }
+  
+header {  display: grid;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: 1 / 1 / 2 / 4;
+    text-align: center;
+}
+  
+main {  display: grid;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: 2 / 1 / 3 / 3;
     justify-content: center;
     align-items: center;
-}
 
-#glCanvas {
-    border: 3px solid black;
-    width: 40%;
-}
-
-.deslizador {
+  }
+  
+footer {  display: grid;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: 3 / 1 / 4 / 4;
+    text-align: center;
+  }
+  
+  .deslizador {
     display: flex;
+}
+
+* {
+  font-family: sans-serif;
 }
