--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,8 +18,9 @@ main {  display: grid;
     grid-area: 2 / 1 / 3 / 3;
     justify-content: center;
     align-items: center;
-
+    padding: 5%;
   }
+
   
 footer {  display: grid;
     gap: 0px 0px;
@@ -30,6 +31,10 @@ footer {  display: grid;
   
   .deslizador {
     display: flex;
+}
+
+canvas {
+  width: 100%;
 }
 
 * {
