--- a/static/css/hover-style.css
+++ b/static/css/hover-style.css
@@ -1,6 +1,7 @@
 :root {
     --bg-color: #000000 ;
     --font-color: #FFFFFF;
+    --blue-sky: rgb(127,178,255);
 
 }
 
@@ -64,64 +65,21 @@ a :hover {
  */
 
 
-.boton {
-    width: 110%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.8s ease;
-    position: relative;
-    border: 2px solid var(--bg-color);
-    margin: 0 40px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+.btn-change{
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    background: var(--blue-sky);
+    margin: 20px;
+    float: left;
+    box-shadow: 0 0 1px #ccc;
+    transition: all 0.2s ease-in-out;
+    border: 0px;
+    color: #fff;
 }
-
-.boton::before,
-.boton::after {
-    position: absolute;
-    display: block;
-    content: "";
-    width: 100%;
-    height: 100%;
+.btn-change:hover{
+    transform: scale(1.1);
+    background: #2587b8;
+    color: #fff;
 }
-
-.boton2 {
-    border: none;
-    z-index: 10;
-}
-
-.boton2 h4 {
-    z-index: 10;
-    color: var(--bg-color);
-    font-size:larger;
-}
-
-.boton2:after {
-    border: 2px solid var(--bg-color);
-    transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    background-color: var(--font-color);
-}
-
-.boton2:before {
-    width: 0;
-    height: 0;
-    transition: all 500ms ease;
-}
-
-.boton2:hover:after {
-    width: 0;
-    height: 0;
-    opacity: 0;
-}
-
-.boton2:hover:before {
-    width: 100%;
-    height: 100%;
-    background-color: var(--bg-color);
-}
-
-.boton2:hover h4 {
-    color: var(--font-color);
-}   
