--- a/static/css/hover-style.css
+++ b/static/css/hover-style.css
@@ -66,10 +66,7 @@ a :hover {
 
 
 .btn-change{
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    padding: 0.5em;
     background: var(--blue-sky);
     margin: 20px;
     float: left;
