--- a/static/css/hover-style.css
+++ b/static/css/hover-style.css
@@ -80,3 +80,56 @@ a :hover {
     background: #2587b8;
     color: #fff;
 }
+
+/* Style all font awesome icons */
+.fa {
+  padding-top: 5px;
+  font-size: 30px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+  box-shadow: 4px 4px 3px lightblue;
+  background: inherit;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-github {
+  background: #24292f;
+  color: white;
+}
+
+/* LinkedIn */
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+/* Instagram */
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+/* Google */
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+#logo {
+    width: 10%;
+    margin: 0 1% 0;
+}
