--- a/static/css/hover-style.css
+++ b/static/css/hover-style.css
@@ -1,3 +1,16 @@
+/*
+ * ────────────────────────────────────────────────────────────────────── I ──────────
+ *   :::::: H O V E R   S T Y L E   C S S : :  :   :    :     :        :          :
+ * ────────────────────────────────────────────────────────────────────────────────
+ * Fichero con estilos para botones y efectos 'hover'
+ */
+
+
+
+/*
+ * ─── COLORS ─────────────────────────────────────────────────────────────────────
+ */
+
 :root {
     --bg-color: #000000 ;
     --font-color: #FFFFFF;
@@ -7,6 +20,8 @@
 
 /*
  * ─── INDEX OPTION HOVER ─────────────────────────────────────────────────────────
+ * Source from https://codepen.io/nxworld/pen/ZYNOBZ
+ *             https://codepen.io/ssmkhrj/pen/MWjpWKp?editors=1100
  */
 
 .title {
@@ -62,8 +77,7 @@ a :hover {
 
 /*
  * ─── BUTTON HOVER ───────────────────────────────────────────────────────────────
- */
-
+ */ 
 
 .btn-change{
     padding: 0.5em;
@@ -80,6 +94,10 @@ a :hover {
     background: #2587b8;
     color: #fff;
 }
+
+/*
+ * ─── SOCIAL MEDIA BUTTONS ───────────────────────────────────────────────────────
+ */  
 
 /* Style all font awesome icons */
 .fa {
@@ -129,7 +147,11 @@ a :hover {
   color: white;
 }
 
+/*
+ * ─── LOGO SIZE ──────────────────────────────────────────────────────────────────
+ */
+
 #logo {
-    width: 10%;
-    margin: 0 1% 0;
+  width: 10%;
+  margin: 0 1% 0;
 }
